# simplicial-agent

./: .gitignore  AGENT.md  Cargo.toml  README.md
src/: collaborate.rs  collapse.rs  complex.rs  euler.rs  lib.rs  rips.rs  simplex.rs
