[package]
name = "simplicial-agent"
version = "0.1.0"
edition = "2024"
description = "Simplicial complexes modeling agent collaboration topology"
license = "MIT"
repository = "https://github.com/SuperInstance/simplicial-agent"
keywords = ["simplicial", "topology", "collaboration", "agents", "complex"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
